--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,6 +27,8 @@ body{
     justify-content: flex-end;
     background-color: lightskyblue;
     /* padding: 5px; */
+    z-index:9999;
+    
     
 }
 
